@@ -13,7 +13,6 @@ install:
   - cpanm -n ExtUtils::CBuilder
   - cpanm -n FFI::CheckLib
   - cpanm -n Math::Int64
-  - cpanm -n Config::AutoConf
   - cpanm -n Win32::ErrorMode
   - cpanm -n Devel::PPPort  
   - cpanm -n constant
