@@ -159,7 +159,6 @@ IPC::Cmd = 0
 
 [Prereqs / BuildPrereqs]
 -phase = build
-Config::AutoConf = 0.309
 ExtUtils::CBuilder = 0
 
 [Prereqs / TestPrereqs]
